[tool.poetry]
name = "billing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.22"
alembic = "^1.4.3"
fastapi = "^0.63.0"
pydantic = {extras = ["email", "dotenv"], version = "^1.7.3"}
psycopg2-binary = "^2.8.6"
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
