[tool.poetry]
name = "billing"
version = "0.1.0"
description = ""
authors = ["Jack <eugddd7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.22"
alembic = "^1.4.3"
fastapi = "^0.63.0"
pydantic = {extras = ["email", "dotenv"], version = "^1.7.3"}
psycopg2-binary = "^2.8.6"
uvicorn = "^0.13.3"
click = "^7.1.2"
aiopg = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pre-commit = "^2.9.3"
pytest-asyncio = "^0.14.0"
async-asgi-testclient = "^1.4.5"
Faker = "^5.6.0"
asynctest = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
